Test de deployment render

--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,9 @@ services:
             - .:/app:rw
         ports:
             - "8000:8000"
-
+        networks:
+            - my_network
+    
     database:
         image: postgres:16-alpine
         environment:
@@ -20,12 +22,20 @@ services:
         volumes:
             - database_data:/var/lib/postgresql/data:rw
         ports:
-            - "5432:5432"    
-            
+            - "5432:5432"
+        networks:
+            - my_network
+    
     adminer:
         image: adminer
         ports:
             - "8080:8080"  # Adminer accessible sur http://localhost:8080
+        networks:
+            - my_network
 
 volumes:
     database_data:
+
+networks:
+    my_network:
+        driver: bridge 
