--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "doctrine/orm": "^3.3",
         "dompdf/dompdf": "^3.1",
         "lexik/jwt-authentication-bundle": "*",
+        "meilisearch/meilisearch-php": "^1.3",
         "nelmio/cors-bundle": "^2.5",
+        "php-http/guzzle7-adapter": "^1.1",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
         "runtime/frankenphp-symfony": "^0.2.0",
