--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -1,9 +1,12 @@
 nelmio_cors:
     defaults:
-        allow_origin: ['*'] # en prod, remplace * par ton frontend Vercel
+        allow_origin: ['matchroom.vercel.app']
         allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         allow_headers: ['Content-Type', 'Authorization']
         max_age: 3600
     paths:
         '^/api/':
-            allow_origin: ['https://matchroom-git-dev-samidehils-projects.vercel.app']
+            allow_origin:
+                - 'https://matchroom-git-dev-samidehils-projects.vercel.app'
+                - 'http://localhost:3000'
+                - 'http://127.0.0.1:3000'
